--- a/client/res/layout/activity_main.xml
+++ b/client/res/layout/activity_main.xml
@@ -24,5 +24,14 @@
         android:layout_marginTop="220dp"
         android:text="ready"
         android:textSize="30dp" />
+    
+    <TextView
+        android:id="@+id/textDecode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="280dp"
+        android:text="decode"
+        android:textSize="30dp" />
 
 </RelativeLayout>
